--- a/docs/src/doc/mkdocs.yml
+++ b/docs/src/doc/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Dokka
+site_name: Dokka documentation
 
 # Meta tags (placed in header)
 site_description: Dokka is a documentation engine for Kotlin, performing the same function as javadoc for Java
@@ -37,30 +37,45 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.magiclink
   - pymdownx.smartsymbols
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+          - name: mermaid
+            class: mermaid
+            format: !!python/name:pymdownx.superfences.fence_code_format
 
 # Dev server binding
 #dev_addr: 127.0.0.1:3001
 
 nav:
   - Home: index.md
-  - User guide:
+  - User guides:
       - Introduction: user_guide/introduction.md
-      - Gradle: user_guide/gradle/usage.md
-      - Maven: user_guide/maven/usage.md
-      - Command line: user_guide/cli/usage.md
-      - Html frontend: user_guide/base-specific/frontend.md
-      - Versioning: user_guide/versioning/versioning.md
-      - Android plugin: user_guide/android-plugin/android-plugin.md
-  - Plugin development:
+      - Applying Dokka:
+          - Gradle: user_guide/applying/gradle.md
+          - Maven: user_guide/applying/maven.md
+          - Command line: user_guide/applying/cli.md
+      - Output formats:
+          - HTML: user_guide/output-formats/html.md
+      - Plugins:
+          - Versioning plugin: user_guide/plugins/versioning-plugin.md
+          - Android plugin: user_guide/plugins/android-plugin.md
+  - Developer guides:
       - Introduction: developer_guide/introduction.md
-      - Data model: developer_guide/data_model.md
-      - Extension points: developer_guide/extension_points.md
+      - Workflow: developer_guide/workflow.md
+      - Architecture:
+          - Overview: developer_guide/architecture/architecture_overview.md
+          - Data model:
+              -  Documentables: developer_guide/architecture/data_model/documentables.md
+              -  Page & Content: developer_guide/architecture/data_model/page_content.md
+              -  Extra properties: developer_guide/architecture/data_model/extra.md
+          - Extension points: developer_guide/architecture/extension_points.md
+      - Plugin development:
+          - Introduction: developer_guide/plugin-development/introduction.md
+          - Simple plugin tutorial: developer_guide/plugin-development/simple-plugin-guide.md
   - Community:
+      - Slack: community/slack.md
       - Community plugins: community/plugins-list.md
-  - About:
-      - FAQ: about/FAQ.md
-      - Slack channel: about/slack_channel.md
+  - FAQ: faq.md
 
 extra_javascript:
   - expand_navigation.js
